fix items jumping on drop

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,7 +62,10 @@ input {
 }
 
 .item {
-    @apply grid place-items-center bg-[#778289] text-black rounded flex-wrap object-contain p-0.5 cursor-grab transition-all duration-200 ease-in-out drop-shadow-lg;
+    transition-property: box-shadow, background-color, color, border-color;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-in-out;
+    @apply grid place-items-center bg-[#778289] text-black rounded flex-wrap object-contain p-0.5 cursor-grab drop-shadow-lg;
 }
 
 .item:hover {
@@ -153,7 +156,7 @@ button.action-buttons {
 
 .item-delete__expanded {
     @apply opacity-50 hover:opacity-100 transition-all duration-150 ease-linear absolute top-2 right-2 text-red-500 cursor-pointer font-bold z-[99999] md:hidden;
-    text-shadow: 0 0 10px rgba(255,0,0);
+    text-shadow: 0 0 10px rgba(255, 0, 0);
 }
 
 .loader {
@@ -197,7 +200,7 @@ button.action-buttons {
 }
 
 .tooltip::after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: -5px;
     left: 50%;
@@ -211,7 +214,7 @@ button.action-buttons {
 }
 
 .tooltip::before {
-    content: '';
+    content: "";
     position: absolute;
     bottom: -6px;
     left: 50%;
@@ -220,6 +223,6 @@ button.action-buttons {
     height: 0;
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
-    border-top: 6px solid white; 
+    border-top: 6px solid white;
     z-index: 9999;
 }
